more fixes to cp1